# ossim-plugins

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
atp/: AtpCommon.h.in  CMakeLists.txt
atp/src/: AtpAnnotatedImage.cpp  AtpAnnotatedImage.h  AtpConfig.cpp  AtpConfig.h  AtpGenerator.cpp  AtpGenerator.h  AtpGeneratorBase.cpp  AtpGeneratorBase.h  AtpOpenCV.cpp  AtpOpenCV.h  AtpTileSource.cpp  AtpTileSource.h  AutoTiePoint.cpp  AutoTiePoint.h  AutoTiePointService.cpp  AutoTiePointService.h  CMakeLists.txt  Config.h  Config.h.in  Image.cpp  Image.h  MatchPoint.h  PhotoBlock.cpp  PhotoBlock.h  ServiceBase.h  TiePoint.cpp  TiePoint.h  ossimAtpPluginInit.cpp  ossimAtpTool.cpp  ossimAtpTool.h  ossimAtpToolFactory.cpp  ossimAtpToolFactory.h  ossimCorrelationSource.cpp  ossimCorrelationSource.h  ossimDescriptorSource.cpp  ossimDescriptorSource.h
atp/test/: CMakeLists.txt  atp-config-test.cpp  atp-pax-test.cpp  atp-residuals.cpp  atp-test.cpp  atp-test2.cpp
aws/: README.md  (+1 more)
aws/src/: CMakeLists.txt  S3HeaderCache.cpp  S3HeaderCache.h  S3StreamDefaults.cpp  S3StreamDefaults.h  ossimAwsPluginInit.cpp  ossimAwsStreamFactory.cpp  ossimAwsStreamFactory.h  ossimS3IStream.h  ossimS3StreamBuffer.cpp  ossimS3StreamBuffer.h
cnes/src/: CMakeLists.txt  ossimAlosPalsarModel.cpp  ossimAlosPalsarModel.h  ossimCosmoSkymedModel.cpp  ossimEnvisatAsarModel.cpp  ossimEnvisatAsarModel.h  ossimErsSarModel.cpp  ossimFormosatDimapSupportData.cpp  ossimFormosatDimapSupportData.h  ossimFormosatModel.cpp  ossimFormosatModel.h  ossimGeometricSarSensorModel.cpp  ossimGeometricSarSensorModel.h  ossimPleiadesDimapSupportData.cpp  ossimPleiadesDimapSupportData.h  ossimPleiadesModel.cpp  ossimPleiadesModel.h  ossimPluginCommon.cpp  ossimPluginInit.cpp  ossimPluginProjectionFactory.cpp  ossimPluginProjectionFactory.h  ossimPluginReaderFactory.cpp  ossimPluginReaderFactory.h  ossimRadarSat2Model.cpp  ossimRadarSat2Model.h  ossimRadarSat2ProductDoc.cpp  ossimRadarSat2ProductDoc.h  ossimRadarSat2RPCModel.cpp  ossimRadarSat2TiffReader.cpp  ossimRadarSatModel.cpp  ossimSpot6DimapSupportData.cpp  ossimSpot6DimapSupportData.h  ossimSpot6Model.cpp  ossimSpot6Model.h  ossimTerraSarModel.cpp  ossimTerraSarModel.h  ossimTerraSarProductDoc.cpp  ossimTerraSarTiffReader.cpp  ossimTileMapModel.cpp  ossimTileMapModel.h
csm3/: CMakeLists.txt  VTSMisc.h  constants.h  ossimCsm3Loader.cpp  ossimCsm3Loader.h  ossimCsm3PluginInit.cpp  ossimCsm3SensorModel.cpp  ossimCsm3SensorModel.h  vts_isd.cpp
csm3/src/: CMakeLists.txt  VTSMisc.h  ossimCsm3Config.h.in  ossimCsm3Loader.cpp  ossimCsm3Loader.h  ossimCsm3PluginInit.cpp  ossimCsm3ProjectionFactory.cpp  ossimCsm3ProjectionFactory.h  ossimCsm3SensorModel.cpp  ossimCsm3SensorModel.h  ossimMspLoader.cpp  ossimMspLoader.h
csm3/test/: CMakeLists.txt  csm3-plugin-test.cpp
dem/: CMakeLists.txt  README.md
dem/src/: CMakeLists.txt  ossimDemPluginInit.cpp  ossimDemTool.cpp  ossimDemTool.h  ossimDemToolConfig.cpp  ossimDemToolConfig.h  ossimDemToolFactory.cpp  ossimDemToolFactory.h
dem/test/: CMakeLists.txt  dem-test.cpp  detect-test.cpp
fftw3/: CMakeLists.txt  README.md
fftw3/src/: CMakeLists.txt  ossimFftw3Factory.cpp  ossimFftw3Factory.h  ossimFftw3Filter.cpp  ossimFftw3Filter.h  ossimFftw3PluginInit.cpp
gdal/src/: CMakeLists.txt  gdal.vcproj  ossimGdalDataset.cpp  ossimGdalElevationDataFactory.cpp  ossimGdalElevationDatabaseFactory.h  ossimGdalImageElevationDatabase.cpp  ossimGdalImageElevationDatabase.h  ossimGdalImageWriterFactory.h  ossimGdalInfoFactory.cpp  ossimGdalInfoFactory.h  ossimGdalObjectFactory.cpp  ossimGdalOgrVectorAnnotation.cpp  ossimGdalOgrVectorAnnotation.h  ossimGdalOverviewBuilder.cpp  ossimGdalOverviewBuilder.h  ossimGdalOverviewBuilderFactory.cpp  ossimGdalPluginInit.cpp  ossimGdalProjectionFactory.cpp  ossimGdalProjectionFactory.h  ossimGdalTileSource.cpp  ossimGdalTileSource.h  ossimGdalTiledDataset.cpp  ossimGdalType.h  ossimGdalWriter.cpp  ossimGdalWriter.h  ossimHdfInfo.cpp  ossimHdfReader.cpp  ossimOgcWktTranslator.cpp  ossimOgcWktTranslator.h  ossimOgrGdalTileSource.cpp  ossimOgrInfo.cpp  ossimOgrInfo.h  ossimOgrVectorTileSource.cpp  ossimOgrVectorTileSource.h  ossimShapeDatabase.cpp  ossimShapeFile.cpp  ossimShpElevIndex.cpp  ossimShpElevIndex.h
geopdf/src/: CMakeLists.txt  ossimGeoPdfInfo.cpp  ossimGeoPdfInfo.h  ossimGeoPdfInfoFactory.cpp  ossimGeoPdfInfoFactory.h  ossimGeoPdfPluginInit.cpp  ossimGeoPdfReader.cpp  ossimGeoPdfReader.h  ossimGeoPdfReaderFactory.cpp  ossimGeoPdfReaderFactory.h
hdf5/src/: CMakeLists.txt  ossimH5GridModel.cpp  ossimH5GridModel.h  ossimH5ImageDataset.cpp  ossimH5Info.cpp  ossimH5Info.h  ossimH5Options.cpp  ossimH5PluginInit.cpp  ossimH5ProjectionFactory.cpp  ossimH5ProjectionFactory.h  ossimH5Reader.cpp  ossimH5Reader.h  ossimH5ReaderFactory.cpp  ossimH5ReaderFactory.h  ossimH5Util.cpp  ossimH5Util.h  ossimHdf5PluginHandlerFactory.cpp  ossimHdf5PluginInit.cpp  ossimViirsHandler.cpp  ossimViirsHandler.h
jpeg12/src/: CMakeLists.txt  ossimJpeg12NitfReader.cpp  ossimJpeg12NitfReader.h  ossimJpeg12PluginInit.cpp  ossimJpeg12ReaderFactory.cpp  ossimJpeg12ReaderFactory.h  ossimJpegMemSrc12.cpp  ossimJpegMemSrc12.h
kakadu/src/: CMakeLists.txt  ossimJpipProjectionFactory.cpp  ossimJpipProjectionFactory.h  ossimKakaduCodecFactory.cpp  ossimKakaduCodecFactory.h  ossimKakaduCommon.cpp  ossimKakaduCompressedTarget.cpp  ossimKakaduCompressedTarget.h  ossimKakaduCompressor.cpp  ossimKakaduCompressor.h  ossimKakaduJ2kCodec.cpp  ossimKakaduJ2kCodec.h  ossimKakaduJ2kReader.cpp  ossimKakaduJ2kReader.h  ossimKakaduJp2Reader.cpp  ossimKakaduJp2Reader.h  ossimKakaduJp2Writer.cpp  ossimKakaduJp2Writer.h  ossimKakaduJpipHandler.cpp  ossimKakaduJpipHandler.h  ossimKakaduJpipHandlerFactory.h  ossimKakaduJpipImageGeometryFactory.h  ossimKakaduJpipInfo.h  ossimKakaduJpipInfoFactory.cpp  ossimKakaduJpipInfoFactory.h  (+10 more)
mrsid/: CMakeLists.txt  MRSID_SDK_DIR  README.md
msp/: CMakeLists.txt
opencv/: CMakeLists.txt  README.md
pdal/: CMakeLists.txt  CMakeLists.txt~  README.md
potrace/: CMakeLists.txt  README.md
reg/: CMakeLists.txt
(+317 files in other folders)
